<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general purpose-->

    <string name="preference_file_key" translatable="false">TRACCIA_PREFERENCES</string>
    <string name="app_name">Vocal Pacer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">START ANYWAY</string>
    <string name="cancel">CANCEL</string>
    <string name="wait">WAIT</string>
    <string name="keep">KEEP</string>
    <string name="discard">DISCARD</string>
    <string name="date_placeholder" translatable="false">dd-MMM-yyyy</string>
    <string name="time_placeholder" translatable="false">hh:mm:ss</string>
    <string name="distance_placeholder" translatable="false">__._</string>
    <string name="duration_placeholder" translatable="false">__:__:__</string>

    <!-- toasts-->
    <string name="toast_configuration_loaded">Configuration successfully loaded.</string>
    <string name="toast_session_saved_in_db">Session successfully saved in database.</string>

    <!-- activity main -->
    <string name="blank_value" translatable="false">___._</string>
    <string name="blank_value_time" translatable="false">__:__:__</string>
    <string name="distance_unit_km" translatable="false">km</string>
    <string name="speed_unit_kmh" translatable="false">km/h</string>
    <string name="time_unit" translatable="false">hh.mm.ss</string>
    <string name="avg_pace_unit" translatable="false">min/km</string>

    <string name="main_label_distance">Distance:</string>
    <string name="main_label_expected_distance">Finish:</string>

    <string name="speed_label">Speed:</string>
    <string name="main_label_time">Time:</string>
    <string name="main_label_residual_time">Residual time:</string>

    <string name="avg_pace_label">Avg. pace:</string>

    <string name="btnlabel_start">Start session</string>
    <string name="btnlabel_stop">End session</string>
    <string name="btnlabel_blank" translatable="false">-</string>

    <string name="main_userinfo_forcestart_nogps">GPS is not available.</string>
    <string name="main_userinfo_forcestart_gpsfix">I\'m waiting for GPS position.</string>

    <string name="main_userinfo_session_started">Session started.</string>
    <string name="main_userinfo_session_stopped">End of session.</string>
    <string name="main_userinfo_session_ready">GPS position found. I\'m ready to start.</string>
    <string name="ask_for_save_session">Do you want to keep this session in memory?</string>
    <string name="main_label_blank" translatable="false">---</string>

    <!-- notification -->
    <string name="notification_sesson_running">Session running.</string>
    <string name="notification_sesson_stop">No session.</string>

    <!-- speech -->
    <string name="speech_recording_start">session started</string>
    <string name="speech_recording_stop">end of session</string>
    <string name="speech_service_terminated">service terminated</string>
    <string name="speech_meter">meter</string>
    <string name="speech_meters">meters</string>
    <string name="speech_kilometer">kilometer</string>
    <string name="speech_kilometers">kilometers</string>
    <string name="speech_hour">hours</string>
    <string name="speech_hours">hour</string>
    <string name="speech_minute">minute</string>
    <string name="speech_minutes">minutes</string>
    <string name="speech_one">one</string>
    <string name="speech_and">and</string>
    <string name="speech_togo_time_1"></string>
    <string name="speech_togo_time_2">to go</string>
    <string name="speech_togo_distance_1">finish at</string>
    <string name="speech_togo_distance_2"></string>
    <string name="speech_finish_reached">finish</string>
    <string name="speech_one_quarter">one quarter</string>
    <string name="speech_one_half">one half</string>
    <string name="speech_three_quarters">three quarters</string>
    <string name="speech_target_distance_reached">target distance reached</string>
    <string name="speech_insight_keep_this_pace">keep this pace</string>
    <string name="speech_insight_increase_the_pace">increase the pace</string>
    <string name="speech_insight_decrease_the_pace">decrease the pace</string>

    <!-- activity: settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_checkboxlabel_adviseontime">Speak at regular time intervals</string>
    <string name="settings_checkboxlabel_adviseondistance">Speak at regular distance intervals</string>
    <string name="settings_checkboxlabel_adviseelapsedtime">Elapsed time</string>
    <string name="settings_checkboxlabel_advisedistance">Distance</string>
    <string name="settings_checkboxlabel_advisepace">Average pace</string>
    <string name="settings_label_alsoinformabout">Also inform about:</string>
    <string name="settings_label_time_interval">Time interval:</string>
    <string name="settings_label_distance_interval">Distance interval:</string>
    <string name="settings_checkboxlabel_expected_session_duration">Session duration:</string>
    <string name="settings_checkboxlabel_advise_remaining_time">Remaining time</string>
    <string name="settings_checkboxlabel_advise_finish_distance">Distance at finish</string>
    <string name="settings_checkboxlabel_approximate_distance_to_quarters_of_km">Approximate distance to quarters of km</string>
    <string name="settings_checkboxlabel_target_distance">Target distance:</string>
    <string name="settings_checkboxlabel_target_distance_fulfilment">Target dist. fulfilment</string>
    <string name="settings_checkboxlabel_advise_on_pace_change">Advise on pace change</string>

    <string-array name="selectable_times" translatable="false">
        <item>1\'</item>
        <item>5\'</item>
        <item>10\'</item>
        <item>15\'</item>
        <item>30\'</item>
        <item>1h</item>
        <item>2h</item>
    </string-array>

    <string-array name="selectable_expected_session_durations" translatable="false">
        <item>1\'</item>
        <item>2\'</item>
        <item>5\'</item>
        <item>10\'</item>
        <item>15\'</item>
        <item>20\'</item>
        <item>30\'</item>
        <item>45\'</item>
        <item>1h</item>
        <item>2h</item>
        <item>5h</item>
    </string-array>

    <string-array name="selectable_distances" translatable="false">
        <item>250 m</item>
        <item>500 m</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
    </string-array>

    <string-array name="selectable_target_distances" translatable="false">
        <item>1 km</item>
        <item>1.5 km</item>
        <item>2 km</item>
        <item>2.5 km</item>
        <item>3 km</item>
        <item>3.5 km</item>
        <item>4 km</item>
        <item>4.5 km</item>
        <item>5 km</item>
        <item>5.5 km</item>
        <item>6 km</item>
        <item>6.5 km</item>
        <item>7 km</item>
        <item>7.5 km</item>
        <item>8 km</item>
        <item>8.5 km</item>
        <item>9 km</item>
        <item>9.5 km</item>
        <item>10 km</item>
        <item>10.5 km</item>
        <item>11 km</item>
        <item>11.5 km</item>
        <item>12 km</item>
        <item>12.5 km</item>
        <item>13 km</item>
        <item>14 km</item>
        <item>15 km</item>
        <item>16 km</item>
        <item>17 km</item>
        <item>18 km</item>
        <item>19 km</item>
        <item>20 km</item>
    </string-array>

    <!-- configuration parameters by sharedPreferences -->
    <string name="preferences__advise_on_time_base" translatable="false">PREF_ADVICE_ON_TIME_BASIS</string>
    <string name="preferences__advise_on_distance_base" translatable="false">PREF_ADVICE_ON_DISTANCE_BASIS</string>
    <string name="preferences__advise_time_on_distance_base" translatable="false">PREF_ADVICE_TIME_ON_DISTANCE_BASIS</string>
    <string name="preferences__advise_distance_on_time_base" translatable="false">PREF_ADVICE_DISTANCE_ON_TIME_BASIS</string>
    <string name="preferences__time_interval" translatable="false">PREF_TIME_INTERVAL</string>
    <string name="preferences__distance_interval" translatable="false">PREF_DISTANCE_INTERVAL</string>
    <string name="preferences__target_duration" translatable="false">PREF_TARGET_DURATION</string>
    <string name="preferences__target_distance" translatable="false">PREF_TARGET_DISTANCE</string>
    <string name="preferences__advise_remaining_time_on_time_base" translatable="false">PREF_ADVISE_REMAINING_TIME_ON_TIME_BASE</string>
    <string name="preferences__advise_finish_distance_on_time_base" translatable="false">PREF_ADVISE_FINISH_DISTANCE_ON_TIME_BASE</string>
    <string name="preferences__advise_remaining_time_on_distance_base" translatable="false">PREF_ADVISE_REMAINING_TIME_ON_DISTANCE_BASE</string>
    <string name="preferences__advise_finish_distance_on_distance_base" translatable="false">PREF_ADVISE_FINISH_DISTANCE_ON_DISTANCE_BASE</string>
    <string name="preferences__use_session_duration" translatable="false">PREF_USE_SESSION_DURATION</string>
    <string name="preferences__approximate_distances_to_quarters_of_km" translatable="false">PREF_APPROXIMATE_DISTANCE_TO_QUARTERS_OF_KM</string>
    <string name="preferences__use_target_distance" translatable="false">PREF_USE_TARGET_DISTANCE</string>
    <string name="preferences__advise_target_distance_fulfilment_on_time_base" translatable="false">PREF_ADVISE_TARGET_DISTANCE_FULFILMENT_ON_TIME_BASE</string>
    <string name="preferences__advise_target_distance_fulfilment_on_distance_base" translatable="false">PREF_ADVISE_TARGET_DISTANCE_FULFILMENT_ON_DISTANCE_BASE</string>
    <string name="preferences__advise_on_pace_change" translatable="false">PREF_ADVISE_ON_PACE_CHANGE</string>

    <!-- activity: sessions -->
    <string name="title_activity_sessions">Sessions</string>

    <string name="action_settings">Settings</string>
    <string name="action_sessions">Sessions</string>

    <string name="label___sessions___nofsessions">Number of sessions:</string>
    <string name="label___sessions___totaltime">Total time:</string>
    <string name="label___sessions___totaldistance">Total distance:</string>

    <!-- activity: session_details -->
    <string name="title_activity_session_details">Session Details</string>
    <string name="session_details__confirm_delete">Are you sure you want to delete this session?\n This cannot be undone.</string>
    <string name="session_details__other_session_data">Other session data:</string>
    <string name="session_details__n_of_samples">Number of samples: </string>
    <string name="session_details__id_of_session">ID of session: </string>
    <string name="session_details__session_exported">GPX file created.</string>



    <string name="title_activity_show_session_in_map">Map View</string>


</resources>
