<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.apps.lorenzofailla.votrac.Sessions">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay___sessions___maininfo">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label___sessions___nofsessions"
                android:id="@+id/txv___sessions___nofsessions"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_label_blank"
                android:id="@+id/txv___sessions___nofsessions_value"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label___sessions___totaldistance"
                android:id="@+id/txv___sessions___totaldistance"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label___sessions___totaltime"
                android:id="@+id/txv___sessions___totaltime"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank_value_time"
                android:id="@+id/txv___sessions___totaltime_value"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank_value"
                android:id="@+id/txv___sessions___totaldistance_value"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_unit_km"
                android:id="@+id/txv___sessions___totaldistance_unit"
                android:layout_column="2"
                android:layout_row="1"
                android:textSize="@dimen/text_size_units"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_unit"
                android:id="@+id/txv___sessions___totaltime_unit"
                android:layout_marginLeft="5dp"
                android:layout_row="2"
                android:layout_column="2"
                android:textSize="@dimen/text_size_units" />
        </GridLayout>

    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lst_sessions"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/lay___sessions___maininfo" />

</RelativeLayout>
