<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.lorenzofailla.vocalpacer.Settings">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:columnCount="2"
                android:rowCount="9">

                <CheckBox
                    android:id="@+id/chk_advise_on_time_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="0"
                    android:onClick="onClick"
                    android:text="@string/settings_checkboxlabel_adviseontime" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/settings_label_time_interval" />

                <Spinner
                    android:id="@+id/spn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_row="1"
                    android:entries="@array/selectable_times"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/txv_moreoptions1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/settings_label_alsoinformabout" />

                <CheckBox
                    android:id="@+id/chk_advise_distance_on_time_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/settings_checkboxlabel_advisedistance" />

                <CheckBox
                    android:id="@+id/chk___settings___advise_remaining_time_on_time_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/settings_checkboxlabel_advise_remaining_time" />

                <CheckBox
                    android:id="@+id/chk___settings___advise_finish_distance_on_time_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/settings_checkboxlabel_advise_finish_distance" />

                <CheckBox
                    android:id="@+id/chk___settings___advise_target_distance_fulfilment_on_time_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/settings_checkboxlabel_target_distance_fulfilment" />

            </GridLayout>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:columnCount="2"
                android:rowCount="9">

                <CheckBox
                    android:id="@+id/chk_advise_on_distance_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="0"
                    android:onClick="onClick"
                    android:text="@string/settings_checkboxlabel_adviseondistance" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/settings_label_distance_interval" />

                <Spinner
                    android:id="@+id/spn_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_row="1"
                    android:entries="@array/selectable_distances"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/settings_label_alsoinformabout" />

                <CheckBox
                    android:id="@+id/chk_advise_time_on_distance_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/settings_checkboxlabel_adviseelapsedtime" />

                <CheckBox
                    android:id="@+id/chk___settings___advise_remaining_time_on_distance_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/settings_checkboxlabel_advise_remaining_time" />

                <CheckBox
                    android:id="@+id/chk___settings___advise_finish_distance_on_distance_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/settings_checkboxlabel_advise_finish_distance" />

                <CheckBox
                    android:id="@+id/chk___settings___advise_target_distance_fulfilment_on_distance_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/settings_checkboxlabel_target_distance_fulfilment" />

            </GridLayout>

            <CheckBox
                android:id="@+id/chk___settings___approximate_distances_to_quarters_of_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_checkboxlabel_approximate_distance_to_quarters_of_km" />

            <CheckBox
                android:id="@+id/chk___settings___expected_session_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_checkboxlabel_expected_session_duration" />

            <Spinner
                android:id="@+id/spn___settings___expected_session_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/selectable_expected_session_durations"
                android:spinnerMode="dialog" />


            <CheckBox
                android:id="@+id/chk___settings___use_target_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_checkboxlabel_target_distance" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spn___settings___target_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/selectable_target_distances" />

                <TextView
                    android:id="@+id/txv___settings___selected_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/main_label_blank" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/chk___settings___advise_on_pace_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_checkboxlabel_advise_on_pace_change" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
